--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,11 +1,26 @@
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Work+Sans:800';
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif; }
 
 .Header {
-  background-color: #222;
+  background-color: #2C2F31;
   padding: 20px;
-  color: white; }
+  color: #fff; }
   .Header .Logo {
-    height: 80px; }
+    height: 55px; }
+  .Header .dropdown {
+    font-size: 16pt;
+    list-style: none;
+    font-family: "Work Sans", sans-serif;
+    font-weight: 800;
+    position: relative;
+    top: 14px; }
+    .Header .dropdown .caret {
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 5px solid #fff; }
+    .Header .dropdown .dropdown-toggle {
+      color: #fff !important; }
