--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,4 @@
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css';
 @import 'themes/black_and_orange';
 @import 'base/index';
 @import 'components/all';
