added fontawesome and updated to make better use of a themed scss layout

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -1,15 +1,22 @@
 .Header {
-  background-color: $background-dark;
+  background-color: $header-background;
   padding: 20px;
-  color: $white;
+  color: $header-text-color;
   .Logo {
     height: 55px;
   }
+  .fa {
+    display: inline-block;
+    position: relative;
+    top: 14px;
+    right: 10px;
+  }
   .dropdown {
+    display: inline-block;
     font-size: 16pt;
     list-style: none;
-    font-family: $impact;
-    font-weight: 800;
+    font-family: $header-font-family;
+    font-weight: $header-weight;
     position: relative;
     top: 14px;
     .caret {
@@ -18,7 +25,7 @@
       border-top: 5px solid #fff;
     }
     .dropdown-toggle {
-      color: $white !important;
+      color: $header-text-color !important;
     }
   }
   
