--- a/src/style/components/_stats.scss
+++ b/src/style/components/_stats.scss
@@ -1,3 +1,16 @@
 .stats {
-  
+  .sub-title {
+    margin-top: 0px;
+  }
+  .info {
+    padding-top: 16px;
+  }
+  .other_weeks {
+    .sub-title {
+      text-align: center;
+    }
+    .recharts-wrapper {
+      left: 25%;
+    }
+  }
 }
