--- a/src/style/themes/_black_and_orange.scss
+++ b/src/style/themes/_black_and_orange.scss
@@ -37,3 +37,9 @@ $header-weight : bold;
 $score-color: $primary-accent;
 $score-font: $impact;
 $score-border-color: $off-black;
+
+// Warnings
+$outline: $primary-accent;
+$icon_color: $white;
+$message_background: $white;
+$message_color: $off-black;
