--- a/src/style/main.css
+++ b/src/style/main.css
@@ -128,3 +128,6 @@ body {
     vertical-align: middle;
     line-height: 1.3;
     margin-right: 10px; }
+
+.ten_day_forecast {
+  margin-top: 20px; }
