enabled clustertruck image on graph when A- or A day is on graph

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -131,6 +131,8 @@ body {
 
 .ten_day_forecast {
   margin-top: 20px; }
+  .ten_day_forecast .recharts-responsive-container {
+    margin-top: 30px; }
 
 .score_label {
   font-family: "Work Sans", sans-serif;
